--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,84 @@
-
-Usage:   
-  pip <command> [options]
-
-Commands:
-  install                     Install packages.
-  download                    Download packages.
-  uninstall                   Uninstall packages.
-  freeze                      Output installed packages in requirements format.
-  list                        List installed packages.
-  show                        Show information about installed packages.
-  check                       Verify installed packages have compatible dependencies.
-  search                      Search PyPI for packages.
-  wheel                       Build wheels from your requirements.
-  hash                        Compute hashes of package archives.
-  completion                  A helper command used for command completion.
-  help                        Show help for commands.
-
-General Options:
-  -h, --help                  Show help.
-  --isolated                  Run pip in an isolated mode, ignoring
-                              environment variables and user configuration.
-  -v, --verbose               Give more output. Option is additive, and can be
-                              used up to 3 times.
-  -V, --version               Show version and exit.
-  -q, --quiet                 Give less output. Option is additive, and can be
-                              used up to 3 times (corresponding to WARNING,
-                              ERROR, and CRITICAL logging levels).
-  --log <path>                Path to a verbose appending log.
-  --proxy <proxy>             Specify a proxy in the form
-                              [user:passwd@]proxy.server:port.
-  --retries <retries>         Maximum number of retries each connection should
-                              attempt (default 5 times).
-  --timeout <sec>             Set the socket timeout (default 15 seconds).
-  --exists-action <action>    Default action when a path already exists:
-                              (s)witch, (i)gnore, (w)ipe, (b)ackup, (a)bort.
-  --trusted-host <hostname>   Mark this host as trusted, even though it does
-                              not have valid or any HTTPS.
-  --cert <path>               Path to alternate CA bundle.
-  --client-cert <path>        Path to SSL client certificate, a single file
-                              containing the private key and the certificate
-                              in PEM format.
-  --cache-dir <dir>           Store the cache data in <dir>.
-  --no-cache-dir              Disable the cache.
-  --disable-pip-version-check
-                              Don't periodically check PyPI to determine
-                              whether a new version of pip is available for
-                              download. Implied with --no-index.
+asn1crypto==0.24.0
+backports-abc==0.5
+backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.6.0
+bleach==2.1.3
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
+configparser==3.5.0
+cryptography==2.1.4
+cycler==0.10.0
+decorator==4.3.0
+entrypoints==0.2.3
+enum34==1.1.6
+Flask==1.0.2
+Flask-Login==0.4.1
+functools32==3.2.3.post2
+futures==3.2.0
+gyp==0.1
+html5lib==0.999999999
+idna==2.6
+ipaddress==1.0.17
+ipykernel==4.8.2
+ipython==5.7.0
+ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter-client==5.2.3
+jupyter-core==4.4.0
+jupyterlab==0.32.1
+jupyterlab-launcher==0.10.5
+keyring==10.6.0
+keyrings.alt==3.0
+kiwisolver==1.0.1
+lxml==4.2.1
+MarkupSafe==1.0
+matplotlib==2.2.2
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.5.0
+numpy==1.14.5
+pandocfilters==1.4.2
+pathlib2==2.3.2
+pbr==4.1.0
+pexpect==4.6.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.6.0
+pycairo==1.16.2
+pycrypto==2.6.1
+pygame==1.9.3
+Pygments==2.2.0
+pygobject==3.26.1
+pyparsing==2.2.0
+python-dateutil==2.7.3
+pytz==2018.5
+pyxdg==0.25
+pyzmq==17.0.0
+requests==2.19.1
+scandir==1.7
+scour==0.36
+SecretStorage==2.3.1
+Send2Trash==1.5.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.11.0
+SQLAlchemy==1.2.9
+stevedore==1.28.0
+subprocess32==3.5.2
+terminado==0.8.1
+testpath==0.3.1
+tornado==5.0.2
+traitlets==4.3.2
+urllib3==1.23
+virtualenv==15.1.0
+virtualenv-clone==0.3.0
+virtualenvwrapper==4.8.2
+wcwidth==0.1.7
+webencodings==0.5
+Werkzeug==0.14.1
+WTForms==2.2.1
